added resume link

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <!-- Header -->
       <header id="header">
         <div class="logo">
-          <img style="max-width: 100%; max-height: 100%;" src="images/ian2.png" alt="Hey, look! It's Ian!" />
+          <img style="max-width: 100%; max-height: 100%" src="images/ian2.png" alt="Hey, look! It's Ian!" />
         </div>
         <div class="content">
           <div class="inner">
@@ -31,6 +31,7 @@
           <ul>
             <li><a href="#intro">Intro</a></li>
             <li><a href="#projects">Projects</a></li>
+            <li><a href="/Magenta_Ian_Resume.pdf">Resume</a></li>
             <li><a href="#skills">Skills</a></li>
             <li><a href="#contact">Contact</a></li>
             <!--<li><a href="#elements">Elements</a></li>-->
@@ -62,7 +63,7 @@
         <article id="projects">
           <h2 class="major">Custom Crafts</h2>
           <span class="image main"><img src="images/spaceship.png" alt="" /></span>
-          <div style="display: flex; justify-content: space-around; margin-bottom: 2rem;">
+          <div style="display: flex; justify-content: space-around; margin-bottom: 2rem">
             <a target="_blank" class="button small" href="https://github.com/ZacharyRizer/Custom-Crafts">GitHub</a>
             <a target="_blank" class="button small" href="https://customcrafts.herokuapp.com/">Live Site</a>
           </div>
@@ -78,7 +79,7 @@
           <br />
           <h2 class="major">Game Dev Toolbox</h2>
           <span class="image main"><img src="images/dots.png" alt="" /></span>
-          <div style="display: flex; justify-content: space-around; margin-bottom: 2rem;">
+          <div style="display: flex; justify-content: space-around; margin-bottom: 2rem">
             <a target="_blank" class="button small" href="https://github.com/ianmagenta/Game-Dev-Toolbox">GitHub</a>
             <a target="_blank" class="button small" href="https://game-dev-toolbox.herokuapp.com/">Live Site</a>
           </div>
@@ -96,7 +97,7 @@
           <br />
           <h2 class="major">SteamMarket Analyzer</h2>
           <span class="image main"><img src="images/pic02-steammaket.png" alt="" /></span>
-          <div style="display: flex; justify-content: space-around; margin-bottom: 2rem;">
+          <div style="display: flex; justify-content: space-around; margin-bottom: 2rem">
             <a target="_blank" class="button small" href="https://github.com/ianmagenta/SteamMarket-Analyzer">GitHub</a>
             <a target="_blank" class="button small" href="https://steammarket-analyzer.herokuapp.com/snapshot"
               >Live Site</a
@@ -132,65 +133,65 @@
         <!-- Skills -->
         <article id="skills">
           <h2 class="major">Skills</h2>
-          <ul class="icons" style="text-align: center; padding-left: 0%;">
-            <li style="padding: 0.35rem 0.75em 0.35em 0;">
+          <ul class="icons" style="text-align: center; padding-left: 0%">
+            <li style="padding: 0.35rem 0.75em 0.35em 0">
               <a
                 target="_blank"
-                style="height: 5.25rem; width: 5.25rem; line-height: 5.25rem;"
+                style="height: 5.25rem; width: 5.25rem; line-height: 5.25rem"
                 href="https://www.python.org/"
                 class="icon brands fab fa-python fa-3x"
               ></a>
             </li>
-            <li style="padding: 0.35rem 0.75em 0.35em 0;">
+            <li style="padding: 0.35rem 0.75em 0.35em 0">
               <a
                 target="_blank"
-                style="height: 5.25rem; width: 5.25rem; line-height: 5.25rem;"
+                style="height: 5.25rem; width: 5.25rem; line-height: 5.25rem"
                 href="https://www.javascript.com/"
                 class="icon brands fab fa-js fa-3x"
               ></a>
             </li>
-            <li style="padding: 0.35rem 0.75em 0.35em 0;">
+            <li style="padding: 0.35rem 0.75em 0.35em 0">
               <a
                 target="_blank"
-                style="height: 5.25rem; width: 5.25rem; line-height: 5.25rem;"
+                style="height: 5.25rem; width: 5.25rem; line-height: 5.25rem"
                 href="https://developer.mozilla.org/en-US/docs/Web/Guide/HTML/HTML5"
                 class="icon brands fab fa-html5 fa-3x"
               ></a>
             </li>
-            <li style="padding: 0.35rem 0.75em 0.35em 0;">
+            <li style="padding: 0.35rem 0.75em 0.35em 0">
               <a
                 target="_blank"
-                style="height: 5.25rem; width: 5.25rem; line-height: 5.25rem;"
+                style="height: 5.25rem; width: 5.25rem; line-height: 5.25rem"
                 href="https://developer.mozilla.org/en-US/docs/Web/CSS"
                 class="icon brands fab fa-css3-alt fa-3x"
               ></a>
             </li>
 
-            <li style="padding: 0.35rem 0.75em 0.35em 0;">
+            <li style="padding: 0.35rem 0.75em 0.35em 0">
               <a
                 target="_blank"
-                style="height: 5.25rem; width: 5.25rem; line-height: 5.25rem;"
+                style="height: 5.25rem; width: 5.25rem; line-height: 5.25rem"
                 href="https://nodejs.org/en/"
                 class="icon brands fab fa-node fa-3x"
               ></a>
             </li>
-            <li style="padding: 0.35rem 0.75em 0.35em 0;">
+            <li style="padding: 0.35rem 0.75em 0.35em 0">
               <a
                 target="_blank"
-                style="height: 5.25rem; width: 5.25rem; line-height: 5.25rem;"
+                style="height: 5.25rem; width: 5.25rem; line-height: 5.25rem"
                 href="https://expressjs.com/"
                 class="icon fas fa-server fa-3x"
               ></a>
             </li>
-            <li style="padding: 0.35rem 0.75em 0.35em 0;">
+            <li style="padding: 0.35rem 0.75em 0.35em 0">
               <a
                 target="_blank"
-                style="height: 5.25rem; width: 5.25rem; line-height: 5.25rem;"
+                style="height: 5.25rem; width: 5.25rem; line-height: 5.25rem"
                 href="https://reactjs.org/"
                 class="icon brands fab fa-react fa-3x"
               ></a>
             </li>
-            <li style="padding: 0.35rem 0.75em 0.35em 0;">
+            <li style="padding: 0.35rem 0.75em 0.35em 0">
               <a
                 target="_blank"
                 style="
@@ -206,7 +207,7 @@
                 class="icon brands fab fa-python fa-3x"
               ></a>
             </li>
-            <li style="padding: 0.35rem 0.75em 0.35em 0;">
+            <li style="padding: 0.35rem 0.75em 0.35em 0">
               <a
                 target="_blank"
                 style="
@@ -222,7 +223,7 @@
                 class="icon brands fab fa-python fa-3x"
               ></a>
             </li>
-            <li style="padding: 0.35rem 0.75em 0.35em 0;">
+            <li style="padding: 0.35rem 0.75em 0.35em 0">
               <a
                 target="_blank"
                 style="
@@ -238,23 +239,23 @@
                 class="icon brands fab fa-python fa-3x"
               ></a>
             </li>
-            <li style="padding: 0.35rem 0.75em 0.35em 0;">
+            <li style="padding: 0.35rem 0.75em 0.35em 0">
               <a
                 target="_blank"
-                style="height: 5.25rem; width: 5.25rem; line-height: 5.25rem;"
+                style="height: 5.25rem; width: 5.25rem; line-height: 5.25rem"
                 href="https://www.docker.com/"
                 class="icon brands fab fa-docker fa-3x"
               ></a>
             </li>
-            <li style="padding: 0.35rem 0.75em 0.35em 0;">
+            <li style="padding: 0.35rem 0.75em 0.35em 0">
               <a
                 target="_blank"
-                style="height: 5.25rem; width: 5.25rem; line-height: 5.25rem;"
+                style="height: 5.25rem; width: 5.25rem; line-height: 5.25rem"
                 href="https://git-scm.com/"
                 class="icon brands fab fa-git-alt fa-3x"
               ></a>
             </li>
-            <li style="padding: 0.35rem 0.75em 0.35em 0;">
+            <li style="padding: 0.35rem 0.75em 0.35em 0">
               <a
                 target="_blank"
                 style="
@@ -270,7 +271,7 @@
                 class="icon brands fab fa-python fa-3x"
               ></a>
             </li>
-            <li style="padding: 0.35rem 0.75em 0.35em 0;">
+            <li style="padding: 0.35rem 0.75em 0.35em 0">
               <a
                 target="_blank"
                 style="
@@ -286,10 +287,10 @@
                 class="icon brands fab fa-python fa-3x"
               ></a>
             </li>
-            <li style="padding: 0.35rem 0.75em 0.35em 0;">
+            <li style="padding: 0.35rem 0.75em 0.35em 0">
               <a
                 target="_blank"
-                style="height: 5.25rem; width: 5.25rem; line-height: 5.25rem;"
+                style="height: 5.25rem; width: 5.25rem; line-height: 5.25rem"
                 href="https://unity.com/"
                 class="icon brands fab fa-unity fa-3x"
               ></a>
@@ -355,14 +356,6 @@
             <li>
               <a target="_blank" href="https://twitter.com/ianmagenta" class="icon brands fa-twitter"
                 ><span class="label">Twitter</span></a
-              >
-            </li>
-            <li>
-              <a
-                target="_blank"
-                href="https://docs.google.com/document/d/1cgQhr441DvcTbSBkq_uM7yJMPainH-jQ2K5cG2XyWec/edit?usp=sharing"
-                class="icon brands"
-                ><i class="fas fa-file"></i><span class="label">Resume</span></a
               >
             </li>
             <li>
